mu-deployment.yaml




apiVersion: apps/v1
kind: Deployment
metadata:
  name: mu-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mu-app
  template:
    metadata:
      labels:
        app: mu-app
    spec:
      containers:
      - name: mu-app
        image: ghcr.io/saisairepo/mu-app:v1.1 # Ensure this image exists
        ports:
        - containerPort: 80
        imagePullPolicy: Always # Force pull from the registry (optional)
      imagePullSecrets:
      - name: ghcr-registry-secret
