new-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: new-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: new-app
  template:
    metadata:
      labels:
        app: new-app
    spec:
      containers:
      - name: new-app
        image: ghcr.io/saisairepo/mu-app:v1.1 # Ensure this image exists
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: ghcr-registry-secret
