mu-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mu-service
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 32700
  selector:
    app: mu-app
