new-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: new-service
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: new-app
  type: ClusterIP
