mu-ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mu-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mu.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mu-service
            port:
              number: 80
